--- a/tiendaHardware/templates/layouts/base.html
+++ b/tiendaHardware/templates/layouts/base.html
@@ -16,5 +16,6 @@
         {% block contenido %}{% endblock %}
     </main>
     <script src="{% static 'js/base.js'%}"></script>
+    {% block misScripts%} {% endblock %}
 </body>
 </html>
