--- a/tiendaHardware/templates/layouts/partials/header.html
+++ b/tiendaHardware/templates/layouts/partials/header.html
@@ -36,11 +36,10 @@
     <div class="header_footer">
         <nav class="nav-bar">
             <ul>
-                <li> <a href="{% url 'inicio'%}">Inicio</a></li>
+                <li><a href="{% url 'inicio'%}">Inicio</a></li>
                 <li><a href="{% url 'productos'%}">Productos </a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="#">Ayuda</a></li>
-                <li><a href="#">Marcas Sponsors</a></li>
+                <li><a href="{% url 'marcas'%}">Marcas Sponsors</a></li>
+                <li><a href="{% url 'soporte'%}">Soporte</a></li>
             </ul>
         </nav>
     </div>
