--- a/tiendaHardware/templates/layouts/base.html
+++ b/tiendaHardware/templates/layouts/base.html
@@ -15,6 +15,7 @@
     <main class="main-base">
         {% block contenido %}{% endblock %}
     </main>
+    {% include 'layouts/partials/footer.html'%}
     <script src="{% static 'js/base.js'%}"></script>
     {% block misScripts%} {% endblock %}
 </body>
