--- a/tiendaHardware/static/css/base.css
+++ b/tiendaHardware/static/css/base.css
@@ -10,9 +10,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 4;
 }
-.envios{
-    background-color:#26a300;
+.envios_header{
+    background-color:#0982be;
     width: 100%;
     color: white;
     display: flex;
@@ -27,6 +30,7 @@
 }
 /*Encabezado dentro de nuestro header*/
 .header_head{
+    top: 0;
     display: flex;
     padding: 10px 30px;
     width: 100%;
@@ -79,6 +83,7 @@
         align-items: center;
         height: 100%;
         width: 40px;
+        border: none;
         
     }
 }
@@ -157,7 +162,21 @@
 .main-base{
     padding: 0 30px;
     margin-top: 20px;
+    width: 100%;
+    max-height: 90%;
 }
 body{
     background-color: #1d1d1d;
+}
+
+
+.footer{
+    width: 100%;
+    margin-top: 50px;
+    height: 100px;
+    background-color: rgba(0, 0, 0, 0.911);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
