--- a/tiendaHardware/templates/layouts/base.html
+++ b/tiendaHardware/templates/layouts/base.html
@@ -7,7 +7,7 @@
     <title>{% block titulo %}{% endblock %}| Tienda</title>
     <link rel="stylesheet" href="{% static 'css/base.css'%}">
     {% block estilos %}{% endblock %}
-
+    {% block headerScripts%} {% endblock %}
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
